feat: adjust auth handler and update swagger docs
